@@ -1,5 +1,12 @@
 2012-04-27  Paolo Bonzini  <bonzini@gnu.org>
 
+	* gcc.c-torture/execute/20120427-2.c: New testcase.
+	* gcc.dg/tree-ssa/phi-opt-10.c: New testcase.
+	* gcc.dg/tree-ssa/ssa-pre-28.c: Bypass new optimization.
+	* gcc.dg/tree-ssa/ssa-ifcombine-7.c: Look into ifcombine dump.
+
+2012-04-27  Paolo Bonzini  <bonzini@gnu.org>
+
 	PR target/53138
 	* gcc.c-torture/execute/20120427-1.c: New testcase.
 
